5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1593_1802.log
== TEST (2019-03-26 11:25:19) 
-- CODE:
from math import *
vida=int(input("digite a vida inicial: "))
dado1=int(input("digite o terceiro valor: "))
dado2=int(input("digite o terceiro valor: "))
dano=int(abs(sqrt(5*dado1))+pi**dado2/3)
result= vida-dano
print(result)
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:25:32) 
-- CODE:
from math import *
vida=int(input("digite a vida inicial: "))
dado1=int(input("digite o terceiro valor: "))
dado2=int(input("digite o terceiro valor: "))
dano=int(abs(sqrt(5*dado1))+pi**dado2/3)
result= vida-dano
print(result)
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:25:44) 
-- CODE:
from math import *
vida=int(input("digite a vida inicial: "))
dado1=int(input("digite o terceiro valor: "))
dado2=int(input("digite o terceiro valor: "))
dano=int(abs(sqrt(5*dado1))+pi**dado2/3)
result= vida-dano
print(result)
-- EXECUTION TIME:
0.202787
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
-122
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
-25
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:26:17) 
-- CODE:
from math import *
vida=int(input("digite a vida inicial: "))
dado1=int(input("digite o terceiro valor: "))
dado2=int(input("digite o terceiro valor: "))
dano=int(abs(sqrt(5*dado1))+(pi**dado2/3)
result= vida-dano
print(result)
-- ERROR:
File "XXXX", line 6
    result= vida-dano
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:26:33) 
-- CODE:
from math import *
vida=int(input("digite a vida inicial: "))
dado1=int(input("digite o terceiro valor: "))
dado2=int(input("digite o terceiro valor: "))
dano=int(abs(sqrt(5*dado1))+(pi**dado2/3))
result= vida-dano
print(result)
-- EXECUTION TIME:
0.166575
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
-122
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
-25
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:26:34) 
-- CODE:
from math import *
vida=int(input("digite a vida inicial: "))
dado1=int(input("digite o terceiro valor: "))
dado2=int(input("digite o terceiro valor: "))
dano=int(abs(sqrt(5*dado1))+(pi**dado2/3))
result= vida-dano
print(result)
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:27:34) 
-- CODE:
from math import *
vida=int(input("digite a vida inicial: "))
dado1=int(input("digite o terceiro valor: "))
dado2=int(input("digite o terceiro valor: "))
dano=int(abs(sqrt(5*dado1))+(pi**(dado2/3))
result= vida-dano
print(result)
-- EXECUTION TIME:
0.200198
-- ERROR:
  File "/home/codebench/codes/1593/1802/main.py", line 6
    result= vida-dano
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:27:48) 
-- CODE:
from math import *
vida=int(input("digite a vida inicial: "))
dado1=int(input("digite o terceiro valor: "))
dado2=int(input("digite o terceiro valor: "))
dano=int(abs(sqrt(5*dado1))+(pi**(dado2/3)
result= vida-dano
print(result)
-- ERROR:
File "XXXX", line 6
    result= vida-dano
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:27:55) 
-- CODE:
from math import *
vida=int(input("digite a vida inicial: "))
dado1=int(input("digite o terceiro valor: "))
dado2=int(input("digite o terceiro valor: "))
dano=int(abs(sqrt(5*dado1))+(pi**(dado2/3))
result= vida-dano
print(result)
-- ERROR:
File "XXXX", line 6
    result= vida-dano
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:32:11) 
-- CODE:
from math import *
vida=int(input("digite a vida inicial: "))
dado1=int(input("digite o valor dado1: "))
dado2=int(input("digite o valor dado2: "))
golpe=(abs(sqrt(5*dado1)+pi**(dado2/3))
dano=int(golpe)
result= vida-dano
print(result)
-- EXECUTION TIME:
0.144491
-- ERROR:
  File "/home/codebench/codes/1593/1802/main.py", line 6
    dano=int(golpe)
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:32:13) 
-- CODE:
from math import *
vida=int(input("digite a vida inicial: "))
dado1=int(input("digite o valor dado1: "))
dado2=int(input("digite o valor dado2: "))
golpe=(abs(sqrt(5*dado1)+pi**(dado2/3))
dano=int(golpe)
result= vida-dano
print(result)
-- ERROR:
File "XXXX", line 6
    dano=int(golpe)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:33:12) 
-- CODE:
from math import *
vida=int(input("digite a vida inicial: "))
dado1=int(input("digite o valor dado1: "))
dado2=int(input("digite o valor dado2: "))
golpe=int(abs(sqrt(5*dado1)+pi**(dado2/3))
result= vida-dano
print(result)
-- EXECUTION TIME:
0.191475
-- ERROR:
  File "/home/codebench/codes/1593/1802/main.py", line 6
    result= vida-dano
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:33:19) 
-- CODE:
from math import *
vida=int(input("digite a vida inicial: "))
dado1=int(input("digite o valor dado1: "))
dado2=int(input("digite o valor dado2: "))
golpe=int(abs(sqrt(5*dado1)+pi**(dado2/3))
result= vida-dano
print(result)
-- ERROR:
File "XXXX", line 6
    result= vida-dano
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:33:29) 
-- CODE:
from math import *
vida=int(input("digite a vida inicial: "))
dado1=int(input("digite o valor dado1: "))
dado2=int(input("digite o valor dado2: "))
golpe=int(abs(sqrt(5*dado1)+pi**(dado2/3))
result= vida-golpe
print(result)
-- EXECUTION TIME:
0.128127
-- ERROR:
  File "/home/codebench/codes/1593/1802/main.py", line 6
    result= vida-golpe
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:33:38) 
-- CODE:
from math import *
vida=int(input("digite a vida inicial: "))
dado1=int(input("digite o valor dado1: "))
dado2=int(input("digite o valor dado2: "))
golpe=int(abs(sqrt(5*dado1)+pi**(dado2/3))
result= vida-golpe
print(result)
-- ERROR:
File "XXXX", line 6
    result= vida-golpe
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:33:53) 
-- CODE:
from math import *
vida=int(input("digite a vida inicial: "))
dado1=int(input("digite o valor dado1: "))
dado2=int(input("digite o valor dado2: "))
golpe=int(abs(sqrt(5*dado1)+pi**(dado2/3))
result=vida-golpe
print(result)
-- ERROR:
File "XXXX", line 6
    result=vida-golpe
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:34:07) 
-- CODE:
from math import *
vida=int(input("digite a vida inicial: "))
dado1=int(input("digite o valor dado1: "))
dado2=int(input("digite o valor dado2: "))
golpe=int(abs(sqrt(5*dado1)+pi**(dado2/3)))
result=vida-golpe
print(result)
-- EXECUTION TIME:
0.18431
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
